Fix Spacing and other

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -15,4 +15,12 @@
 				height:200px !important;
 			}
 		}
+		.box{
+			img {
+			  opacity: 0.3 !important;
+			}
+			.middle {
+			  opacity: 1 !important;
+			}
+		}
 }
